Fixed scrollbars to be auto instead of always there.
Fixes HospitalRun/frontend#122

--- a/app/styles/_sidebar_nav.scss
+++ b/app/styles/_sidebar_nav.scss
@@ -21,7 +21,7 @@
 }
 
 .scroll-container {
-    overflow: scroll;
+    overflow: auto;
     position: absolute;
     top: 55px;
     left: 0;
